--- a/templates/layout/header.phtml
+++ b/templates/layout/header.phtml
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="dark">
 <head>
+    <base href="<?= BASE_URL ?>">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TPE Especial</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">    
+    
 </head>
 <body>
     <header class="container-fluid py-3">
@@ -26,7 +28,10 @@
                     <a class="nav-link" href="categorias">Categorias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="formularioNuevoProducto">Contacto</a>
+                    <a class="nav-link" href="formProducto">Agregar Producto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="admin">Administracion</a>
                 </li>
             </ul>
         </div>
