--- a/templates/formulario_edicion_producto.phtml
+++ b/templates/formulario_edicion_producto.phtml
@@ -43,7 +43,7 @@
 
     <div class="form-group">
         <label>Descripcion</label>
-        <textarea name="descripcion" placeholder="<?= $producto->Descripcion ?>" value="<?= $producto->Descripcion ?>" class="form-control" rows="3"></textarea>
+        <textarea name="descripcion" placeholder="<?= $producto->Descripcion ?>"  class="form-control" rows="3">"<?= $producto->Descripcion ?>"</textarea>
     </div>
 
     <button type="submit" class="btn btn-primary mt-2">Guardar</button>
