--- a/templates/layout/header.phtml
+++ b/templates/layout/header.phtml
@@ -15,7 +15,12 @@
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Principal</a>
+        
+        <?php if($this->user): ?>
+                    <span class="navbar-brand">Bienvenido: <?= $this->user->email ?></span>
+                <?php endif; ?>
+
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,15 +32,19 @@
                 <li class="nav-item">
                     <a class="nav-link" href="categorias">Categorias</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="formProducto">Agregar Producto</a>
-                </li>
+                <?php if ($this->user):?>             
+                                
                 <li class="nav-item">
                     <a class="nav-link" href="admin">Administracion</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="logout">Logout</a>
                 </li>
+                <?php else: ?>  
+                    <li class="nav-item">
+                    <a class="nav-link" href="showLogin">Login</a>
+                </li>
+                <?php endif; ?>   
             </ul>
         </div>
     </nav>
