--- a/templates/listar_productos.phtml
+++ b/templates/listar_productos.phtml
@@ -16,7 +16,9 @@
                         } ?>  
                         <a href="categorias/<?= $categoriaProducto ?>" ><?= $categoriaProducto ?></a>
                         <a href="<?= BASE_URL ?>productos/<?= $producto->ID_Productos ?>" class="btn btn-primary">Ver más</a>
-                        <a href="<?= BASE_URL ?>formEditarProducto/<?= $producto->ID_Productos ?>" class="btn btn-primary">Editar</a>
+                        <?php if ($this->user):?>
+                            <a href="<?= BASE_URL ?>formEditarProducto/<?= $producto->ID_Productos ?>" class="btn btn-primary">Editar</a>
+                        <?php endif; ?>
                     </div>
                 </div>
             </div>
