--- a/templates/listar_productos.phtml
+++ b/templates/listar_productos.phtml
@@ -4,10 +4,10 @@
         <?php foreach ($productos as $producto): ?>         
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="card">
-                    <img src=<?=$producto->URL_imagen?> class="card-img-top" alt="Producto 1">
+                    <img src=<?=htmlspecialchars($producto->URL_imagen)?> class="card-img-top" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title"><?= $producto->Nombre ?></h5>
-                        <p class="card-text"><?= $producto->Precio ?></p>                       
+                        <h5 class="card-title"><?= htmlspecialchars($producto->Nombre) ?></h5>
+                        <p class="card-text"><?= htmlspecialchars($producto->Precio) ?></p>                       
                         <?php  $categoriaProducto = "Teclados";
                         foreach ($categorias as $categoria){                      
                             if ($categoria->ID_Categorias == $producto->ID_Categorias){                    
@@ -24,10 +24,5 @@
             </div>
         <?php endforeach; ?>
     </div>
-</div>  
-
-
-
-
-
+</div>
 <?php require_once 'templates/layout/footer.phtml'; ?>
