--- a/templates/detalle_producto.phtml
+++ b/templates/detalle_producto.phtml
@@ -1,21 +1,15 @@
 <?php require_once 'templates/layout/header.phtml'; ?>
             <div class="col-12 col-md-6 col-lg-4 mb-4">
                 <div class="card">
-                    <img src=<?=$producto->URL_imagen?> class="card-img-top" alt="Producto 1">
+                    <img src=<?= htmlspecialchars($producto->URL_imagen)?> class="card-img-top" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title"><?= $producto->Nombre ?></h5>
-                        <p class="card-text">Precio  $<?= $producto->Precio ?></p>
-                        <p class="card-text"><?= $producto->Descripcion ?></p>
+                        <h5 class="card-title"><?=  htmlspecialchars($producto->Nombre) ?></h5>
+                        <p class="card-text">Precio  $<?=  htmlspecialchars($producto->Precio) ?></p>
+                        <p class="card-text"><?=  htmlspecialchars($producto->Descripcion) ?></p>
                         <a href="<?= BASE_URL ?>" class="btn btn-primary">Inicio</a>
                     </div>
                 </div>
-            </div>
-        
+            </div>        
     </div>
 </div>
-
-
-
-
-
 <?php require_once 'templates/layout/footer.phtml'; ?>
