--- a/templates/formulario_edicion_producto.phtml
+++ b/templates/formulario_edicion_producto.phtml
@@ -4,7 +4,7 @@
         <div class="col-9">
             <div class="form-group">
                 <label>Nombre</label>
-                <input required name="nombre"  value = "<?= $producto->Nombre ?>" type="text" class="form-control">
+                <input required name="nombre"  value = "<?=  htmlspecialchars($producto->Nombre) ?>" type="text" class="form-control">
             </div>
         </div>
 
@@ -13,7 +13,7 @@
                 <label>Categoria</label>
                 <select required name="categoria" class="form-control">
                     <?php foreach ($categorias as $categoria): ?>
-                        <option value="<?=$categoria->ID_Categorias?>"><?=$categoria->Nombre ?></option>
+                        <option value="<?=$categoria->ID_Categorias?>"><?= htmlspecialchars($categoria->Nombre) ?></option>
                     <?php endforeach ?>
                 </select>
             </div>
@@ -23,29 +23,26 @@
     <div class="col-6">
             <div class="form-group">
                 <label>Precio</label>
-                <input required name="precio" value ="<?= $producto->Precio ?>" type="number" class="form-control">
+                <input required name="precio" value ="<?=htmlspecialchars($producto->Precio) ?>" type="number" class="form-control">
             </div>
         </div>
         <div class="col-6">
             <div class="form-group">
                 <label>Marca</label>
-                <input required name="marca"  value="<?= $producto->Marca?>" type="text" class="form-control">
+                <input required name="marca"  value="<?= htmlspecialchars($producto->Marca)?>" type="text" class="form-control">
             </div>
         </div>
-
         </div>
         <div class="col-9">
             <div class="form-group">
                 <label>URL de imagen:</label>
-                <input required name="URL_imagen" value ="<?= $producto->URL_imagen ?>" value= <?= $producto->URL_imagen ?> type="text" class="form-control">
+                <input required name="URL_imagen" value ="<?= htmlspecialchars($producto->URL_imagen) ?>" type="text" class="form-control">
             </div>
         </div>
-
     <div class="form-group">
         <label>Descripcion</label>
-        <textarea name="descripcion" placeholder="<?= $producto->Descripcion ?>"  class="form-control" rows="3">"<?= $producto->Descripcion ?>"</textarea>
+        <textarea name="descripcion"  class="form-control" rows="3">"<?= htmlspecialchars($producto->Descripcion) ?>"</textarea>
     </div>
-
     <button type="submit" class="btn btn-primary mt-2">Guardar</button>
 </form>
 <?php require_once 'templates/layout/footer.phtml'; ?>
