--- a/templates/layout/header.phtml
+++ b/templates/layout/header.phtml
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         
         <?php if($this->user): ?>
-                    <span class="navbar-brand">Bienvenido: <?= $this->user->email ?></span>
+                    <span class="navbar-brand">Bienvenido: <?= htmlspecialchars($this->user->email) ?></span>
                 <?php endif; ?>
 
         
